# tradingview-qml

./: .gitignore  Bridge.cpp  Bridge.h  CMakeLists.txt  Main.qml  README.md  chart.html  main.cpp
